--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Sharing part of yourself</title>
+        <title>Inspiring people</title>
         <style>
             .imageMain{
                 display:block;
@@ -14,6 +14,10 @@
     <body>
         <h1 align="center">
             Inspiring quotes
+        </h1>
+
+        <h1>
+            <a href="outdoorsPhotography.html">Get outdoors...it's beautiful!</a>
         </h1>
         <h3 align="center">A collection of quotes that I find really inspiring or funny or interesting.</h3>
         <img src="dougTompkins.jpg" width="350" alt="Description of image" class="imageMain"/>
@@ -58,7 +62,7 @@ poignant for an adult: “Why only a little bit better?”" Jonathan Franklin, A
 
         <img src="feynman.jpg" width="450" alt="Description of image" class="imageMain"/>
 
-        <h5 align="center">"What do you care what other people think?" Arlene Feynman  <br> 
+        <h5 align="center">"What do you care what other people think?" Arline Feynman  <br> 
 "The highest forms of understanding we can achieve are laughter and human compassion" Richard Feynman, Surely your Joking Mr Feynman</h5>
 
         <img src="lincoln.jpg" width="350" alt="Description of image" class="imageMain"/>
@@ -68,4 +72,8 @@ poignant for an adult: “Why only a little bit better?”" Jonathan Franklin, A
     </body>
 
     
+</html>
+
+    
+
 </html>
