--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ poignant for an adult: “Why only a little bit better?”" Jonathan Franklin, A
         <img src="paulErdos.jpg" width="350" alt="Description of image" class="imageMain"/>
 
         <h5 align="center">"To communicate with Erdös you had to learn his language. "When we met," said Martin Gardner, the mathematical essayist, "his first question was `When did you arrive?' I looked at my watch, but Graham whispered to me that it was Erdös's way of asking, `When were you born?'"Paul Hoffman, The Man Who Loved Only Numbers (I really recomend reading this book! Erdos was a really unique gentle person)</h5>
+        <h5 align="center"> "What you need is that your brain is open</h5>
    
         <img src="maiaFong.jpg" width="450" alt="Description of image" class="imageMain"/>
         <h5 align="center"> Just a drawing I really like from a photo of my mom when she was young!</h5>
@@ -58,6 +59,8 @@ poignant for an adult: “Why only a little bit better?”" Jonathan Franklin, A
 
         <img src="albertEintein.jpg" width="350" alt="Description of image" class="imageMain"/>
 
+        <h5 align="center"> “We never cease to stand like curious children before the great mystery into which we were born.” Einstein, quoted by Walter Isaacson in Einstein, his Life and Universe </h5>
+        <h5 align="center"> "The search for truth is more precious than it's possesion"</h5>
         <br>
 
         <img src="feynman.jpg" width="450" alt="Description of image" class="imageMain"/>
@@ -72,8 +75,4 @@ poignant for an adult: “Why only a little bit better?”" Jonathan Franklin, A
     </body>
 
     
-</html>
-
-    
-
 </html>
