--- a/outdoorsPhotography.html
+++ b/outdoorsPhotography.html
@@ -11,6 +11,8 @@
         <img src="od5.jpg" width="350" alt="Description of image"/>
         <img src="od6.jpg" width="350" alt="Description of image"/>
         <img src="withApollon.jpg" width="350" alt="Description of image"/>
-        <video controls src="odv1.MOV" width="350" alt="Description of image"/>
+        <video controls src="odv1.MOV" width="350" alt="Description of image"></video>
+        <video controls src="bhs.mp4" width="350" alt="Description of image"></video>
+        
     </body>
-</html>
+</html> 
