--- a/outdoorsPhotography.html
+++ b/outdoorsPhotography.html
@@ -13,6 +13,8 @@
         <img src="withApollon.jpg" width="350" alt="Description of image"/>
         <video controls src="odv1.MOV" width="350" alt="Description of image"></video>
         <video controls src="bhs.mp4" width="350" alt="Description of image"></video>
+        <video controls src="happyFlip.mp4" width="350" alt="Description of image"></video>
         
     </body>
 </html> 
+
