--- a/outdoorsPhotography.html
+++ b/outdoorsPhotography.html
@@ -14,7 +14,10 @@
         <video controls src="odv1.MOV" width="350" alt="Description of image"></video>
         <video controls src="bhs.mp4" width="350" alt="Description of image"></video>
         <video controls src="happyFlip.mp4" width="350" alt="Description of image"></video>
+        <img src="appolon.jpg" width="350" alt="Description of image"/>
+        <img src="appolon2.jpg" width="350" alt="Description of image"/>
         
     </body>
 </html> 
+
 
