--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <h1>
             <a href="outdoorsPhotography.html">Get outdoors...it's beautiful!</a>
+            <a href="family.html">Family!</a>
         </h1>
         <h3 align="center">A collection of quotes that I find really inspiring or funny or interesting.</h3>
         <img src="dougTompkins.jpg" width="350" alt="Description of image" class="imageMain"/>
@@ -76,3 +77,4 @@ poignant for an adult: “Why only a little bit better?”" Jonathan Franklin, A
 
     
 </html>
+
